--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,3 +1,4 @@
-<a href="{{ "/archive" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">Archive</h2></a>
-<a href="{{ "/about" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">About</h2></a>
-<a href="{{ "/atom.xml" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">RSS</h2></a>
+<a href="https://swhume.github.io/about"><h2 class="header-link">About</h2></a>
+<a href="https://github.com/swhume"><h2 class="header-link">GitHub</h2></a>
+<a href="https://www.linkedin.com/in/sam-hume-dsc"><h2 class="header-link">LinkedIn</h2></a>
+<a href="https://swhume.github.io/"><h2 class="header-link">Home</h2></a>
