updates blog to add post links to index

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <div>
-    <a href="{{ "/" | prepend: site.baseurl | replace: '//', '/' }}"><h1>Sam Hume's Blog</h1></a>
+    <h1>Blog Posts by Sam Hume</h1>
     <div class="header-links">
       {% include links.html %}
     </div>
