--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,8 @@
 <footer>
-  <a href="https://creativecommons.org/licenses/by-nc/3.0/deed.en_US">
+  <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.en">
     <span>
         <b>Sam Hume</b>
     </span>
-    {% capture currentyear %}{{ 'now' | date: "%Y" }}{% endcapture %}
-    <span>© {{ currentyear }}</span>
+    <span>© 2024</span>
   </a>
 </footer>
