--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <meta name="generator" content="Jekyll">
+  <meta name="description" content="Sam Hume blog">
+	<meta name="author" content="Sam Hume">    
   <link rel="shortcut icon" href="hdl-icon-32.ico"> 
 
 
