updates index with latest blog post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,5 +4,5 @@ layout: default
 
 <article>
   {{ content }}
-  <time datetime="{{ page.date | date_to_xmlschema }}" class="by-line">{{ page.date | date_to_string }}</time>
+  <time datetime="{{ page.date | date_to_xmlschema }}" class="by-line">Last updated {{ page.date | date_to_string }}</time>
 </article>
